--- a/nest/package.json
+++ b/nest/package.json
@@ -20,9 +20,12 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@hapi/joi": "^16.1.8",
     "@nestjs/common": "^6.8.0",
     "@nestjs/core": "^6.8.0",
     "@nestjs/platform-express": "^6.8.0",
+    "class-transformer": "^0.2.3",
+    "class-validator": "^0.11.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
     "rxjs": "^6.5.3"
@@ -32,6 +35,7 @@
     "@nestjs/schematics": "^6.7.0",
     "@nestjs/testing": "^6.8.0",
     "@types/express": "^4.17.1",
+    "@types/hapi__joi": "^16.0.4",
     "@types/jest": "^24.0.18",
     "@types/node": "^12.7.8",
     "@types/supertest": "^2.0.8",
