--- a/nest/package.json
+++ b/nest/package.json
@@ -24,6 +24,7 @@
     "@nestjs/common": "^6.8.0",
     "@nestjs/core": "^6.8.0",
     "@nestjs/platform-express": "^6.8.0",
+    "@nestjs/serve-static": "^1.0.2",
     "@nestjs/swagger": "^4.0.9",
     "@nestjs/typeorm": "^6.2.0",
     "class-transformer": "^0.2.3",
