--- a/nest/package.json
+++ b/nest/package.json
@@ -23,6 +23,7 @@
     "@hapi/joi": "^16.1.8",
     "@nestjs/common": "^6.8.0",
     "@nestjs/core": "^6.8.0",
+    "@nestjs/passport": "^6.1.1",
     "@nestjs/platform-express": "^6.8.0",
     "@nestjs/serve-static": "^1.0.2",
     "@nestjs/swagger": "^4.0.9",
@@ -30,6 +31,8 @@
     "class-transformer": "^0.2.3",
     "class-validator": "^0.11.0",
     "mysql": "^2.17.1",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
     "rxjs": "^6.5.3",
@@ -44,6 +47,7 @@
     "@types/hapi__joi": "^16.0.4",
     "@types/jest": "^24.0.18",
     "@types/node": "^12.7.8",
+    "@types/passport-local": "^1.0.33",
     "@types/supertest": "^2.0.8",
     "jest": "^24.9.0",
     "prettier": "^1.18.2",
