--- a/nest/package.json
+++ b/nest/package.json
@@ -28,8 +28,14 @@
     "@nestjs/serve-static": "^1.0.2",
     "@nestjs/swagger": "^4.0.9",
     "@nestjs/typeorm": "^6.2.0",
+    "cache-manager": "^2.10.1",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.11.0",
+    "compression": "^1.7.4",
+    "csurf": "^1.10.0",
+    "dotenv": "^8.2.0",
+    "express-rate-limit": "^5.0.0",
+    "helmet": "^3.21.2",
     "mysql": "^2.17.1",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
@@ -44,6 +50,7 @@
     "@nestjs/jwt": "^6.1.1",
     "@nestjs/schematics": "^6.7.0",
     "@nestjs/testing": "^6.8.0",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.1",
     "@types/hapi__joi": "^16.0.4",
     "@types/jest": "^24.0.18",
