--- a/nest/package.json
+++ b/nest/package.json
@@ -36,6 +36,7 @@
     "dotenv": "^8.2.0",
     "express-rate-limit": "^5.0.0",
     "helmet": "^3.21.2",
+    "multer": "^1.4.2",
     "mysql": "^2.17.1",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
@@ -58,6 +59,7 @@
     "@types/passport-jwt": "^3.0.3",
     "@types/passport-local": "^1.0.33",
     "@types/supertest": "^2.0.8",
+    "cookie-parser": "^1.4.4",
     "jest": "^24.9.0",
     "passport-jwt": "^4.0.0",
     "prettier": "^1.18.2",
