--- a/nest/package.json
+++ b/nest/package.json
@@ -25,9 +25,11 @@
     "@nestjs/core": "^6.8.0",
     "@nestjs/passport": "^6.1.1",
     "@nestjs/platform-express": "^6.8.0",
+    "@nestjs/platform-socket.io": "^6.10.13",
     "@nestjs/serve-static": "^1.0.2",
     "@nestjs/swagger": "^4.0.9",
     "@nestjs/typeorm": "^6.2.0",
+    "@nestjs/websockets": "^6.10.13",
     "cache-manager": "^2.10.1",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.11.0",
@@ -43,6 +45,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
     "rxjs": "^6.5.3",
+    "socket.io-redis": "^5.2.0",
     "swagger-ui-express": "^4.1.2",
     "typeorm": "^0.2.22"
   },
@@ -58,6 +61,7 @@
     "@types/node": "^12.7.8",
     "@types/passport-jwt": "^3.0.3",
     "@types/passport-local": "^1.0.33",
+    "@types/socket.io": "^2.1.4",
     "@types/supertest": "^2.0.8",
     "cookie-parser": "^1.4.4",
     "jest": "^24.9.0",
