--- a/nest/package.json
+++ b/nest/package.json
@@ -23,6 +23,7 @@
     "@hapi/joi": "^16.1.8",
     "@nestjs/common": "^6.8.0",
     "@nestjs/core": "^6.8.0",
+    "@nestjs/graphql": "^6.5.3",
     "@nestjs/passport": "^6.1.1",
     "@nestjs/platform-express": "^6.8.0",
     "@nestjs/platform-socket.io": "^6.10.13",
@@ -30,6 +31,7 @@
     "@nestjs/swagger": "^4.0.9",
     "@nestjs/typeorm": "^6.2.0",
     "@nestjs/websockets": "^6.10.13",
+    "apollo-server-express": "^2.9.15",
     "cache-manager": "^2.10.1",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.11.0",
@@ -37,6 +39,8 @@
     "csurf": "^1.10.0",
     "dotenv": "^8.2.0",
     "express-rate-limit": "^5.0.0",
+    "graphql": "^14.5.8",
+    "graphql-tools": "^4.0.6",
     "helmet": "^3.21.2",
     "multer": "^1.4.2",
     "mysql": "^2.17.1",
