--- a/egg/package.json
+++ b/egg/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "egg": "^2.15.1",
+    "egg-mysql": "^3.0.0",
     "egg-scripts": "^2.11.0",
     "egg-validate": "^2.0.2",
     "egg-watcher-chokidar": "^2.0.0"
